Minor tweaks and additions

--- a/chapter_introduction.tex
+++ b/chapter_introduction.tex
@@ -17,8 +17,6 @@ Primarily is that the boundaries of \gls{tmh}s are extremely hard to precisely i
 Secondly is that it is emerging that different membranes have different thicknesses~\cite{VanMeer2008}, and that this is directly reflected in the hydrophobic lengths of the \gls{tmh}~\cite{Sharpe2010, Pogozheva2013}.
 %WALP and KALP peptides as typical peptides
 
-
-
 \begin{figure}[!ht]
 \centering
 \includegraphics[width=1\textwidth]{Intro/Helix_anatomy}
@@ -31,7 +29,6 @@ Although the regions labelled here generally hold true in terms of the statistic
 
 \label{fig:helixcartoon1}
 \end{figure}
-
 
 % Figure: A cartoon depicting various problematic, yet biologically observed topologies and lengths that the alpha helices can adopt.
 From left to right: a typical and traditional \gls{tmh}, an exceptionally long \gls{tmh}, a \gls{tmh} that lies flat in the interface region, a kinked helix that enters and exits the bilayer on the same leaflet, a \gls{tmh} that is not long enough to span the entire membrane.
@@ -132,8 +129,6 @@ This scale is fundamentally based on the partitioning of host-guest pentapeptide
 The Eisenberg scale is a consensus scale based on the earlier scales from Tanford~\cite{Nozaki1971}, Wolfenden~\cite{Rose1993}, Chothia~\cite{Chothia1976}, Janin~\cite{Janin1979},  Wolfenden~\cite{Wolfenden1981}, and the von Heijne scale~\cite{VonHeijne1979}.
 The scales are normalised according to serine~\cite{Eisenberg1984}.
 The automatic TRANSMEM annotation currently used in Uniprot is according to TMHMM~\cite{Krogh2001}, Memsat~\cite{Jones2007}, Phobius~\cite{Kall2004} and the hydrophobic moment plot method of Eisenberg and coworkers~\cite{Eisenberg1984}.
-
-
 
 \subsection{Sequence Complexity}
 
@@ -338,7 +333,7 @@ There is biomedical interest in \gls{snare} drug delivery mechanisms.
 Notably, known \gls{snare} \gls{tmh}s are highly hydrophobic even compared to other tail anchored \gls{tmh}s~\cite{Kalbfleisch2007}.
 This hydrophobicity appears to be a determinate factor in the precise delivery mechanistic route that a~\gls{ta} proteins use for insertion~\cite{Rabu2008, Rabu2009}, for which there is evidence demonstrating that are several mechanisms~\cite{Rabu2009, Johnson2013}.
 
-Whilst most eukaryotic~\gls{ta} proteins are inserted into the~\cite{er}.
+Whilst most eukaryotic~\gls{ta} proteins are inserted into the~\gls{er}.
 
 \subsection{Translocon Independent Membrane Insertion}
 %move on to case studies involving spontaneous insertion?
